[package]
name = "loadbalancer"
version = "0.1.0"
edition = "2024"


[dependencies]
hyper = { version = "1", features = ["http1"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
config = "0.15"
thiserror = "2"
dotenv = "0.15"
serde = { version = "1" }
serde_json = "1.0.140"
