[package]
name = "worker"
version = "0.1.0"
edition = "2024"


[dependencies]
hyper = { version = "1", features = ["http1"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
tower = "0.5"
config = "0.15"
thiserror = "2"
dotenv = "0.15"
serde = { version = "1" }
serde_json = "1.0.140"
fastrand = "2"